--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anthology</title>
     <link rel="stylesheet" href="style.css">
@@ -24,16 +26,19 @@
 
     </div>
 
-    <div onclick="showPoem('ham')">
-
-        <
+    <div onclick="showPoem('time')" id="time">
+        <div id="timeGrid">
+            <h1 class="hidden">Cant the future just</h1>
+            <h1 class="hidden" id="wait">wait</h1>
+            <h1 class="hidden">?</h1>
+        </div>
     </div>
 
     <div id="poems">
         <div class="poem hidden" id="ozyPoem">
             <pre></pre>
         </div>
-        <div class="poem hidden" id="hamPoem">
+        <div class="poem hidden" id="timePoem">
             <pre></pre>
         </div>
         
